Setup active profile