@@ -1,10 +1,11 @@
 package com.phucdevs.springcloud.common;
 
 import com.phucdevs.springcloud.library.LibraryDTO;
-import jakarta.annotation.PostConstruct;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
+import javax.annotation.PostConstruct;
+import java.util.Arrays;
 import java.util.List;
 
 @Component
@@ -15,8 +16,7 @@ public class DataCommon {
     
     @PostConstruct
     private void initData() {
-        
-        libraries.addAll(List.of(
+        libraries.addAll(Arrays.asList(
            new LibraryDTO(1, "Book1"),     
            new LibraryDTO(2, "Book2")     
         ));
